--- a/src/style/components/slideshow.scss
+++ b/src/style/components/slideshow.scss
@@ -10,7 +10,7 @@
   background-position: center;
   @media screen and (max-width: 768px) {
     min-height: 255px;
-    max-width: 100vh;
+    // max-width: 100vh;
     height: auto;
     border-radius: 10px; ;
     grid-column: 1/2;
